Fix spacing

--- a/themes/nica/assets/style/layout/_header.scss
+++ b/themes/nica/assets/style/layout/_header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 1rem 0;
+  padding: 2rem 0;
 
   .navigation-bar {
     display: flex;
@@ -69,7 +69,9 @@
   }
 
   @media only screen and (max-width: $small-devices) {
-
+  
+    padding-top: 1rem;
+  
     .navigation-menu {
       position: fixed;
       top: 0;
